[package]
name = "thumbnailer"
version = "0.1.0"
authors = ["Filippo Cucchetto <filippocucchetto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.15.1"
docopt = "1"
serde = { version = "1", features = ["derive"] }
image = "0.22.3"
md5 = "0.7.0"
hex = "0.4.0"
shellexpand = "1.0.0"
walkdir = "2.2.9"
log = "0.4.8"
env_logger = "0.7.1"